--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "handlebars": "^4.0.5",
+    "js-yaml": "^3.6.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack-stream": "^3.2.0"
