--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "marked": "^0.3.6"
   }
 }
