--- a/src/data/timo.yaml
+++ b/src/data/timo.yaml
@@ -1,5 +1,13 @@
 ---
 title: "Frontend Developer Timo Zöller"
+introduction: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+imagePath: "/static/images/timo.jpg"
+
 person:
   title: "Zur Person"
   "Name": "Timo Zöller"
