Adds enfglish version

--- a/src/data/timo_de.yaml
+++ b/src/data/timo_de.yaml
@@ -1,5 +1,5 @@
 ---
-title: "Frontend Developer Timo Zöller"
+title: "Javascript Developer Timo Zöller"
 introduction: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -55,5 +55,7 @@ links:
   title: "Links"
   list: [
   "[Github](https://github.com/pixelkritzel)",
-  "[Twitter](https://twitter.com/pixelkritzel)"
+  "[Twitter](https://twitter.com/pixelkritzel)",
+  "[Xing](https://www.xing.com/profile/Timo_Zoeller2)",
+  "[Blog](https://blog.pixelkritzel.de)"
 ]
