--- a/src/data/timo_de.yaml
+++ b/src/data/timo_de.yaml
@@ -1,11 +1,6 @@
 ---
 title: "Javascript Developer Timo Zöller"
-introduction: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+introduction: "Hi, Ich bin Timo. Seit fünf Jahren arbeite ich als Frontend-Developer und die letzten drei davon mit dem Schwerpunkt auf Javascript-Single-Page-Applications und Styleguide-zentrierte-Frontend-Architekturen. Ich habe an großen Customer-Relationship-Management-Systemen mitgebaut und mag die Vorstellung, dass mein Code den Arbeitsalltag anderer Menschen verbessert. Als Arbeitsumfeld schätze ich sich einen Umgang auf Augenhöhe und eine offene sowie verantwortungsvolle Arbeitsatmosphäre. Wenn Sie Interesse an einer Zusammenarbeit haben, dann freue ich mich über eine [Email](mailto:timo@pixelkritzel.de) oder einen Anruf ([+49 171 150 555 7](tel:49-171-1505557))."
 imagePath: "/static/images/timo.jpg"
 
 person:
