--- a/src/data/timo_de.yaml
+++ b/src/data/timo_de.yaml
@@ -23,6 +23,7 @@ selected-projects:
   "2013": "**Toroleo**<br />Achitektur, Prozessentwicklung und Coding (HTML, CSS, jQuery) für eine Neuentwicklung des Frontend auf Basis eines *Living Styleguides*"
   "2013-2015": "**Novacom**<br />Architektur, Umsetzung und Designweiterentwicklung und Neuentwicklung des Frontends einer bestehenden großen Applikation. Dabei wurde Wert darauf gelegt, dass der Frontend-Code in Form eines Styleguides so dokumentiert wird, dass die vorhandenen Backend-Entwickler kein Javascript oder CSS beherrschen müssen. Die komplette Konfiguration des Frontends musste mit Hilfe von HTML geschehen. Am Besten vergleichen ließe es sich damit, dass ich so etwas wie in firmeninternes Twitter Bootstrap entwickelt habe. Die Browser-Unterstützung reichte bis zum IE8 herunter. Dazu kamen mehrere Backbone-Komponenten, maßgeschneiderte jQuery-Plugins und eine Ember.js Mobile App. Verwendete Technologien: HTML, CSS, Javascript, jQuery, Jasmine, Grunt, Backbone.js, Ember.js"
   "2015-2016": "**Smava**<br />Mitarbeit in einem agilen Team bei der Neuentwicklung eines internen Tools in Backbone.js"
+  "2017": "**Unit-B Technology**<br />Beratung zum Weiterentwicklung eines Legacy-Frontend-Projekts. Umsetzung einer generischen React.js App, um mobile Assitenz-Systeme zu erzeugen. Konzeption und Entwicklung eines internen Commandline Tools in Node.js"
 
 customers:
   title: "Kunden (Auswahl)"
@@ -34,7 +35,8 @@ customers:
   "[Novacom](https://www.novacom.eu/)",
   "[5apps](https://5apps.com/)",
   "[The Brettinghams](http://www.brettingham.de/)",
-  "[Smava](https://www.smava.de/)"
+  "[Smava](https://www.smava.de/)",
+  "[Unit-B Technology](https://www.unitb-technology.de/)"
 ]
 
 coding:
