--- a/src/data/timo_en.yaml
+++ b/src/data/timo_en.yaml
@@ -1,6 +1,6 @@
 ---
 title: "Javascript Developer Timo Zöller"
-introduction: "Hi, I'm Timo. For five years now I have worked as a frontend developer and three years ago I specialized to mainly Javascript single-page applications and styleguide driven frontend architectures. I worked on big customer relationship systems and I like it when my code helps other people in their daily work. I enjoy working environments where people cooperate as equals to maintain an open and responsible working climate. I would love to work with you - if you are interested in a collaboration please send me an [email](mailto:timo@pixelkritzel.de) or drop me a call ([+49 171 150 555 7](tel:49-171-1505557))."
+introduction: "Hi, I'm Timo. For five years now I have worked as a frontend developer and three years ago I specialized to mainly Javascript single-page applications and styleguide driven frontend architectures. I worked on big customer relationship systems and I like it when my code helps other people in their daily work. I enjoy working environments where people cooperate as equals to maintain an open and responsible working climate. I would love to work with you - if you are interested in a collaboration please send me an [email](mailto:timo@pixelkritzel.de) or drop me a call ([~~+49 171 150 555 7~~ temporary: +49 157 80471882](tel:49-157-80471882))."
 imagePath: "/static/images/timo.jpg"
 
 person:
